--- a/public/project/views/main/main.view.html
+++ b/public/project/views/main/main.view.html
@@ -14,7 +14,13 @@
                 <option>New York</option>
             </select>
         </div>
-        <a ng-click="main.search(doctor)" class="btn btn-primary btn-block">Search</a>
+        <div ng-show="main.illegal" class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            Both fields are required
+        </div>
+        <a ng-click="main.search(doctor.city, doctor.specialty)" class="btn btn-primary btn-block">Search</a>
     </div>
 </div>
 
