--- a/public/project/views/users/login.view.html
+++ b/public/project/views/users/login.view.html
@@ -9,11 +9,11 @@
 <div class="col-md-6">
     <div class="form-group">
         <label for="email">Email:</label>
-        <input ng-model="user.email" class="form-control" type="text" id="email" placeholder="Emial">
+        <input ng-model="user.email" class="form-control" type="text" id="email" placeholder="bob@gmail.com">
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
-        <input ng-model="user.password" class="form-control" type="password" id="password" placeholder="password">
+        <input ng-model="user.password" class="form-control" type="password" id="password" placeholder="bob">
     </div>
     <div>
         <a class="btn btn-primary btn-block" ng-click="login.login(user)">Login</a>
