--- a/public/assignment/client/views/users/register.view.html
+++ b/public/assignment/client/views/users/register.view.html
@@ -27,7 +27,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button ng-click="register(user)" class="btn btn-success" role="button">Register</button>
+            <button ng-click="model.register(user)" class="btn btn-success" role="button">Register</button>
         </div>
     </div>
 </form>
