--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -4,32 +4,32 @@
     <div class="form-group">
         <label for="user-name" class="col-sm-2 control-label">Username:</label>
         <div class="col-sm-10">
-            <input ng-model="currentUser.username" type="text" class="form-control" id="user-name" placeholder="Username">
+            <input ng-model="model.currentUser.username" type="text" class="form-control" id="user-name" placeholder="Username">
         </div>
     </div>
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">Password:</label>
         <div class="col-sm-10">
-            <input ng-model="currentUser.password" type="password" class="form-control" id="password" placeholder="Password">
+            <input ng-model="model.currentUser.password" type="password" class="form-control" id="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
         <label for="fName" class="col-sm-2 control-label">First Name:</label>
         <div class="col-sm-10">
-            <input ng-model="currentUser.firstName" type="text" class="form-control" id="fName" placeholder="First Name">
+            <input ng-model="model.currentUser.firstName" type="text" class="form-control" id="fName" placeholder="First Name">
         </div>
     </div>
     <div class="form-group">
         <label for="lName" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-10">
-            <input ng-model="currentUser.lastName" type="text" class="form-control" id="lName" placeholder="Last Name">
+            <input ng-model="model.currentUser.lastName" type="text" class="form-control" id="lName" placeholder="Last Name">
         </div>
     </div>
 
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-10">
-            <input ng-model="currentUser.email" type="email" class="form-control" id="email" placeholder="Email">
+            <input ng-model="model.currentUser.email" type="email" class="form-control" id="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
