--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -2,7 +2,7 @@
 <h1>Forms</h1>
 <ul class="nav nav-tabs">
     <li role="presentation" class="active"><a href="#">Forms</a></li>
-    <li role="presentation"><a href="fields.view.html">Fields</a></li>
+    <li role="presentation"><a href="#/fields">Fields</a></li>
 </ul>
 <div class="table-responsive">
     <table class="table table-striped">
