--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -16,7 +16,7 @@
                     <a href="" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
-                    <a ng-click="model.removeField()" class="btn btn-default" role="button">
+                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
                     <a href="" class="btn btn-default" role="button">
@@ -39,7 +39,7 @@
                     <a href="" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
-                    <a ng-click="model.removeField()" class="btn btn-default" role="button">
+                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
                     <a href="" class="btn btn-default" role="button">
@@ -62,7 +62,7 @@
                     <a href="" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
-                    <a ng-click="model.removeField()" class="btn btn-default" role="button">
+                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
                     <a href="" class="btn btn-default" role="button">
@@ -86,7 +86,7 @@
                     <a href="" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
-                    <a ng-click="model.removeField()" class="btn btn-default" role="button">
+                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
                     <a href="" class="btn btn-default" role="button">
@@ -109,7 +109,7 @@
                     <a href="" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
-                    <a ng-click="model.removeField()" class="btn btn-default" role="button">
+                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
                     <a href="" class="btn btn-default" role="button">
