--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -1,146 +1,180 @@
+<!--<script>-->
+            <!--$(function(){-->
+                <!--$("#formSortable").sortable();-->
+            <!--});-->
+<!--</script>-->
 <h1>Forms</h1>
 <ul class="nav nav-tabs">
     <li role="presentation"><a href="#/forms">Forms</a></li>
     <li role="presentation" class="active"><a href="#/fields">Fields</a></li>
 </ul>
 <p></p>
-<form ng-repeat="field in model.fields">
-    <div ng-switch="field.type">
-        <div ng-switch-when="TEXT" class="form-group">
-            <label for="fName" class="form-control-label">{{field.label}}:</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" class="form-control" id="fName" placeholder="{{field.placeholder}}">
+<div ln-sortable ln-axis="y" ng-model="model.fields">
+    <form ng-repeat="field in model.fields">
+        <div ng-switch="field.type">
+            <div ng-switch-when="TEXT" class="form-group">
+                <label for="fName" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="fName" placeholder="{{field.placeholder}}">
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1 ">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-sm-push-1 ">
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                    </a>
+            </div>
+
+            <div ng-switch-when="TEXTAREA" class="form-group">
+                <label for="textarea" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1 ">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div ng-switch-when="EMAIL" class="form-group">
+                <label for="email" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="email" class="form-control" id="email" placeholder="{{field.placeholder}}">
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1 ">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div ng-switch-when="OPTIONS" class="form-group">
+                <label for="gender" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <select id="gender" ng-model="selected" class="form-control" ng-options="item.value as item.label for item in field.options">
+                        </select>
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div ng-switch-when="DATE" class="form-group">
+                <label for="date" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="date" class="form-control" id="date">
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1 ">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div ng-switch-when="TEXTAREA" class="form-group">
-            <label for="textarea" class="form-control-label">{{field.label}}:</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
-                </div>
-                <div class="col-sm-6 col-sm-push-1 ">
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
+        <!--<div class="form-group">-->
+            <!--<label>Roles:</label>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-sm-6">-->
+                        <!--<div>-->
+                        <!--<label class="checkbox-inline">-->
+                            <!--<input type="checkbox" value="option1"> Admin-->
+                        <!--</label>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<label class="checkbox-inline">-->
+                                <!--<input type="checkbox" value="option1"> Student-->
+                            <!--</label>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<label class="checkbox-inline">-->
+                                <!--<input type="checkbox" value="option1"> User-->
+                            <!--</label>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-6 col-sm-push-1">-->
+                        <!--<a href="" class="btn btn-default" role="button">-->
+                            <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
+                        <!--</a>-->
+                        <!--<a href="" class="btn btn-default" role="button">-->
+                            <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                        <!--</a>-->
+                        <!--<a href="" class="btn btn-default" role="button">-->
+                            <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                        <!--</a>-->
+                        <!--<a href="" class="btn btn-default" role="button">-->
+                            <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+        <!--</div>-->
 
-        <div ng-switch-when="EMAIL" class="form-group">
-            <label for="email" class="form-control-label">{{field.label}}:</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <input type="email" class="form-control" id="email" placeholder="{{field.placeholder}}">
-                </div>
-                <div class="col-sm-6 col-sm-push-1 ">
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div ng-switch-when="OPTIONS" class="form-group">
-            <label for="gender" class="form-control-label">{{field.label}}:</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <select id="gender" ng-model="selected" class="form-control" ng-options="item.value as item.label for item in field.options">
-                    </select>
-                </div>
-                <div class="col-sm-6 col-sm-push-1">
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div ng-switch-when="DATE" class="form-group">
-            <label for="date" class="form-control-label">{{field.label}}:</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <input type="date" class="form-control" id="date">
-                </div>
-                <div class="col-sm-6 col-sm-push-1 ">
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    </a>
-                    <a href="" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--<div class="form-group">-->
-        <!--<label>Roles:</label>-->
+        <!--<div class="form-group">-->
+            <!--<label>License Agreement:</label>-->
             <!--<div class="row">-->
                 <!--<div class="col-sm-6">-->
                     <!--<div>-->
-                    <!--<label class="checkbox-inline">-->
-                        <!--<input type="checkbox" value="option1"> Admin-->
-                    <!--</label>-->
+                        <!--<label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>-->
                     <!--</div>-->
                     <!--<div>-->
-                        <!--<label class="checkbox-inline">-->
-                            <!--<input type="checkbox" value="option1"> Student-->
-                        <!--</label>-->
-                    <!--</div>-->
-                    <!--<div>-->
-                        <!--<label class="checkbox-inline">-->
-                            <!--<input type="checkbox" value="option1"> User-->
-                        <!--</label>-->
+                        <!--<label class="radio-inline"><input type="radio" name="License Agreement">No</label>-->
                     <!--</div>-->
                 <!--</div>-->
                 <!--<div class="col-sm-6 col-sm-push-1">-->
@@ -158,38 +192,12 @@
                     <!--</a>-->
                 <!--</div>-->
             <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="form-group">-->
-        <!--<label>License Agreement:</label>-->
-        <!--<div class="row">-->
-            <!--<div class="col-sm-6">-->
-                <!--<div>-->
-                    <!--<label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>-->
-                <!--</div>-->
-                <!--<div>-->
-                    <!--<label class="radio-inline"><input type="radio" name="License Agreement">No</label>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-sm-6 col-sm-push-1">-->
-                <!--<a href="" class="btn btn-default" role="button">-->
-                    <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
-                <!--</a>-->
-                <!--<a href="" class="btn btn-default" role="button">-->
-                    <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
-                <!--</a>-->
-                <!--<a href="" class="btn btn-default" role="button">-->
-                    <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
-                <!--</a>-->
-                <!--<a href="" class="btn btn-default" role="button">-->
-                    <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
-                <!--</a>-->
-            <!--</div>-->
         <!--</div>-->
-    <!--</div>-->
-</form>
-    <hr>
-    <div class="form-group">
+    </form>
+</div>
+    <!--{{model.fields}}-->
+<hr>
+<div class="form-group">
         <label for="newField" class="form-control-label">Add New Field:</label>
         <div class="row">
             <div class="col-sm-6">
