--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -127,44 +127,38 @@
                     </div>
                 </div>
             </div>
+
+            <div ng-switch-when="CHECKBOXES" class="form-group">
+                <label>{{field.label}}</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div ng-repeat="option in field.options" class="form-group">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="{{option.value}}"> {{option.label}}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <!--<div class="form-group">-->
-            <!--<label>Roles:</label>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-sm-6">-->
-                        <!--<div>-->
-                        <!--<label class="checkbox-inline">-->
-                            <!--<input type="checkbox" value="option1"> Admin-->
-                        <!--</label>-->
-                        <!--</div>-->
-                        <!--<div>-->
-                            <!--<label class="checkbox-inline">-->
-                                <!--<input type="checkbox" value="option1"> Student-->
-                            <!--</label>-->
-                        <!--</div>-->
-                        <!--<div>-->
-                            <!--<label class="checkbox-inline">-->
-                                <!--<input type="checkbox" value="option1"> User-->
-                            <!--</label>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-6 col-sm-push-1">-->
-                        <!--<a href="" class="btn btn-default" role="button">-->
-                            <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
-                        <!--</a>-->
-                        <!--<a href="" class="btn btn-default" role="button">-->
-                            <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
-                        <!--</a>-->
-                        <!--<a href="" class="btn btn-default" role="button">-->
-                            <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
-                        <!--</a>-->
-                        <!--<a href="" class="btn btn-default" role="button">-->
-                            <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-        <!--</div>-->
+
 
         <!--<div class="form-group">-->
             <!--<label>License Agreement:</label>-->
