--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -132,7 +132,7 @@
                 <label>{{field.label}}</label>
                 <div class="row">
                     <div class="col-sm-6">
-                        <div ng-repeat="option in field.options" class="form-group">
+                        <div ng-repeat="option in field.options">
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" value="{{option.value}}"> {{option.label}}
@@ -144,7 +144,32 @@
                         <a href="" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
                         <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div ng-switch-when="RADIOS" class="form-group">
+                <label>{{field.label}}</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div ng-repeat="option in field.options">
+                            <label class="radio-inline"><input type="radio" name="optionsRadios" value="{{option.value}}">{{option.label}}</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1">
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </a>
                         <a href="" class="btn btn-default" role="button">
@@ -157,36 +182,6 @@
                 </div>
             </div>
         </div>
-
-
-
-        <!--<div class="form-group">-->
-            <!--<label>License Agreement:</label>-->
-            <!--<div class="row">-->
-                <!--<div class="col-sm-6">-->
-                    <!--<div>-->
-                        <!--<label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>-->
-                    <!--</div>-->
-                    <!--<div>-->
-                        <!--<label class="radio-inline"><input type="radio" name="License Agreement">No</label>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="col-sm-6 col-sm-push-1">-->
-                    <!--<a href="" class="btn btn-default" role="button">-->
-                        <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
-                    <!--</a>-->
-                    <!--<a href="" class="btn btn-default" role="button">-->
-                        <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
-                    <!--</a>-->
-                    <!--<a href="" class="btn btn-default" role="button">-->
-                        <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
-                    <!--</a>-->
-                    <!--<a href="" class="btn btn-default" role="button">-->
-                        <!--<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
     </form>
 </div>
     <!--{{model.fields}}-->
