--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-sm-push-1">
-                        <a href="" class="btn btn-default" role="button">
+                        <a ng-click="model.openRadioButtonPop()" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
