--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -43,7 +43,7 @@
                         <input type="textarea" class="form-control" id="textarea" placeholder="{{field.placeholder}}">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a ng-click="model.openMultiLine()" class="btn btn-default" role="button">
+                        <a ng-click="model.openMultiLine(field)" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
